	* CORE: Added a Joda DateTime persister which uses reflection.
	* CORE: Increased synchronization around some code to be proactive about constructor reordering race-conditions.
	* CORE: Added updateAll(), refreshAll(), refreshCollection() for eager foreign collections.  Thanks to Chris Nevill.
	* CORE: Added logging of exceptions to the RuntimeExceptionDao.  Thanks to Kaan.
	* JDBC: Fixed a bug in where transactions aren't commited with auto-commit off.  Thanks to Tony. Bug #3508746. 

4.35: 2/22/2012 (svn r2337)
	* CORE: Bug where not all queried objects were added to cache. Thanks to Filipe Leandro. Bug #3491418.

4.34: 2/22/2012 (svn r2318)
	* CORE: Fixed restriction on Long auto-incremented SQLite ids. Thanks to John Kristian. Bug #3474479.
	* CORE: Added support for sql NOT IN clause to where().  Thanks to Marvin Jomble.  Feature #3474550.
	* CORE: Added support for sql HAVING clause to QueryBuilder.  Thanks to Stephen Couchman.  Feature #3470923.
	* CORE: Added updateBuilder.update() and deleteBuilder.delete().  Thanks to Marvin Jomble.  Feature #3475613.
	* CORE: Fixed problem with ForeignCollections when inserting into cache. Thanks to Nick Campion. Bug #3486577.
	* CORE: Revamped the CloseableIterator to support first, previous, ... moving methods to support more than next.
	* CORE: Added result-flags to some of the iterator methods to allow forwards/backwards in JDBC.
	* CORE: Refactored the FieldConverter and BaseDataType stuff a bit to remove some duplicate code.
	* CORE: Added convenience QueryBuilder.queryForFirst() and queryRawFirst() methods.
	* CORE: Added setArgumentHolderValue() to the PreparedStmt so we can set an argument on prepared queries directly.
	* CORE: Removed the @DatabaseFieldSimple and friends annotations that were deprecated in 4.30.
	* ANDROID: Significantly simplified, improved the internal DAO caching.  Thanks to Ben Mosher.  Bug #3487674. 